<resources>
    <string name="app_name">Stroller</string>
    <string name="facebook_app_id">385796825186612</string>
    <string name="fb_login_protocol_scheme">fb385796825186612</string>
    <string name="btn2">"S T R O L L"</string>
    <string name="editText4">"Where are you now?"</string>
    <string name="editText3">"Where do you want to go?"</string>
    <string name="frg2">"You currently have no favorite routes."</string>
    <string name="btn1">"Logout"</string>
    <string name="txt">"Welcome"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_get_polyline">getPolyline</string>
    <string name="title_activity_find_path">Map</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="FAVES_OR_SEARCH">get value of 1 or 2</string>
    <string name="title_activity_store_favorites">storeFavorites</string>
    <string name="addtoFaves_text_dialog">Choose Name</string>
    <string name="change_name">Change Name</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_navigate">Map</string>
    <string name="orig_dest">You need to choose an origin and a destination.</string>
    <string name="duration">This route is longer than 1.5 hours. Strolling it will take forever!</string>
    <string name="hold">Hold On</string>
    <string name="back">Go Back</string>
    <string name="example">e.g. Montmartre, Paris</string>
    <string name="add">Add to Favorites</string>
    <string name="update">Update</string>
    <string name="wait">Please Wait</string>
    <string name="title">S T R O L L E R</string>
    <string name="icon">icon</string>
    <string name="google">Sign in with google</string>
    <string name="facebook">Sign in with facebook</string>
    <string name="stroll">S T R O L L</string>
    <string name="textview">TextView</string>
    <string name="nofavorite">You have no favorites to show</string>
    <string name="instructions">I N S T R U C T I O N S</string>
    <string name="exists">name already exists</string>
    <string name="info">Route Info</string>
    <string name="full_instruct">Full Instructions</string>
    <string name="sorry">"We're Sorry"</string>
    <string name="sorry_body">Something must have gone wrong. Please try again.</string>
    <string name="location">Location Services</string>
    <string name="settings">Please turn on your location services to receive optimal results.</string>
    <string name="go">settings</string>


</resources>
